--- a/Torrent_Anime/nyaa-manifest.json
+++ b/Torrent_Anime/nyaa-manifest.json
@@ -1,7 +1,8 @@
+
 {
-  "name": "Nyaa.si Provider",
-  "version": "1.0.0",
+  "name": "Nyaa.si",
   "description": "Anime torrents from Nyaa.si",
-  "type": "source",
-  "file": "file:C:/Users/babak/Documents/GitHub/Manipulation-video-sous_titre/Torrent_Anime\nyaa.js"
+  "version": "1.0.0",
+  "manifest_version": 2,
+  "main": "https://github.com/BabakarSyr/Manipulation-video-sous_titre/raw/main/Torrent_Anime/nyaa.js"
 }
